Add LoadBalanceConfig and LoadBalancer all code ,http and https proxy part code and middware code.
